# audio-summary-uploader

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  urls.example.yaml  webui.sh
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
config/: settings.yaml
scripts/: cleanup_notebooks.py
specs/: GUI_SPEC.md  SPEC.md
src/automator/: __init__.py  cli.py  config.py  metadata.py  notebooklm.py  notebooklm_py_backend.py  pipeline.py  report.py  thumbnail.py  url_parser.py  video.py  youtube.py
src/automator/web/: __init__.py  app.py  routes.py
src/automator/web/templates/: base.html  dashboard.html
src/automator/web/templates/partials/: completed.html  header_badge.html  processing.html
tests/: test_config.py  test_pipeline_phases.py  test_url_parser.py  test_web.py
